# mumaxpy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
examples/: init.yml  materials.yml  run__example.py
examples/mx3_templates/: example.tmpl
src/mumaxpy/: data_processing.py  mat_data.py  material.py  mx3_script.py  ovf.py  plot.py  run.py  signal.py  simulation.py  utilities.py  variables.py  verify.py
