[metadata]
name = mumaxpy
author = Igor Savochkin
author_email = savochkin@physics.msu.ru
description = Package for automated running of mumax3 simulations and processing results
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neonh/mumaxpy
keywords = mumax3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Physics
	Topic :: Scientific/Engineering :: Visualization

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =
    pandas
	numpy
	scipy
	astropy
	pyyaml
	matplotlib

[options.packages.find]
where=src
